plugins/automata/src/main/javacc/epmc/automaton/hoa/HoaParser.java
/* Generated By:JavaCC: Do not edit this line. HoaParser.java */
package epmc.automaton.hoa;

import epmc.util.BitSet;
import epmc.util.BitSetUnboundedLongArray;
import java.util.Map;
import epmc.automaton.ProblemsAutomaton;
import static epmc.error.UtilError.ensure;
import epmc.expression.Expression;
import epmc.expression.standard.ExpressionOperator;
import epmc.expression.standard.ExpressionLiteral;
import epmc.operator.OperatorOr;
import epmc.operator.OperatorAnd;
import epmc.operator.OperatorNot;
import epmc.graph.explicit.GraphExplicitWrapper;
import epmc.util.UtilEscape;

public class HoaParser implements HoaParserConstants {

  public GraphExplicitWrapper parseAutomaton(Map<String,Expression> ap2expr) {
    try {
      return Automaton(ap2expr);
    } catch (ParseException e) {
      ensure(false, ProblemsHoa.HOA_PARSING_ERROR, e, e.getLocalizedMessage());
      return null;
    }
  }

  private Expression and(Expression a, Expression b) {
      return new ExpressionOperator.Builder()
        .setOperator(OperatorAnd.AND)
        .setOperands(a, b)
        .build();
  }

    private Expression or(Expression a, Expression b) {
        return new ExpressionOperator.Builder()
            .setOperator(OperatorOr.OR)
            .setOperands(a, b)
            .build();
    }

    private Expression not(Expression expression) {
        return new ExpressionOperator.Builder()
                .setOperator(OperatorNot.NOT)
                .setOperands(expression)
                .build();
    }

  final public GraphExplicitWrapper Automaton(Map<String,Expression> ap2expr) throws ParseException {
  HanoiHeader header;
  GraphExplicitWrapper graph;
    header = Header(ap2expr);
    graph = Body(header);
    {if (true) return graph;}
    throw new Error("Missing return statement in function");
  }

  final public HanoiHeader Header(Map<String,Expression> ap2expr) throws ParseException {
  HanoiHeader header = new HanoiHeader(ap2expr);
  boolean statesSpecified = false;
  boolean apSpecified = false;
  boolean acceptanceSpecified = false;
  boolean accNameSpecified = false;
  boolean toolSpecified = false;
  boolean nameSpecified = false;
    jj_consume_token(HOA);
    jj_consume_token(V1);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ALIAS:
      case NAME:
      case TOOL:
      case STATES:
      case START:
      case AP:
      case ACC_NAME:
      case ACCEPTANCE:
      case PROPERTIES:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATES:
      ensure(!statesSpecified, ProblemsHoa.HOA_MULTIPLE_ITEMS_STATES); statesSpecified = true;
        States(header);
        break;
      case START:
        Start(header);
        break;
      case AP:
      ensure(!apSpecified, ProblemsHoa.HOA_MULTIPLE_ITEMS_AP); apSpecified = true;
        AP(header);
        break;
      case ALIAS:
        Alias(header);
        break;
      case ACCEPTANCE:
      ensure(!acceptanceSpecified, ProblemsHoa.HOA_MULTIPLE_ITEMS_ACCEPTANCE); acceptanceSpecified = true;
        Acceptance(header);
        break;
      case ACC_NAME:
      ensure(!accNameSpecified, ProblemsHoa.HOA_MULTIPLE_ITEMS_ACCEPTANCE); accNameSpecified = true;
        AccName(header);
        break;
      case TOOL:
      ensure(!toolSpecified, ProblemsHoa.HOA_MULTIPLE_ITEMS_TOOL); toolSpecified = true;
        Tool(header);
        break;
      case NAME:
      ensure(!nameSpecified, ProblemsHoa.HOA_MULTIPLE_ITEMS_NAME); nameSpecified = true;
        Name(header);
        break;
      case PROPERTIES:
        Properties(header);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    ensure(acceptanceSpecified, ProblemsHoa.HOA_MISSING_ITEM_ACCEPTANCE);
    BitSet startStates = header.getStartStates();
    for (int state = startStates.nextSetBit(0); state >= 0; state = startStates.nextSetBit(state + 1)) {
      ensure(state < header.getNumStates(), ProblemsHoa.HOA_INVALID_START_STATE, state, header.getNumStates());
    }
    //header.checkAcceptanceName();
    {if (true) return header;}
    throw new Error("Missing return statement in function");
  }

  final public void States(HanoiHeader header) throws ParseException {
  int numStates;
    jj_consume_token(STATES);
    numStates = Int();
                               header.setNumStates(numStates);
  }

  final public void Start(HanoiHeader header) throws ParseException {
  int startState;
    jj_consume_token(START);
    startState = Int();
                              header.setStartState(startState);
  }

  final public void AP(HanoiHeader header) throws ParseException {
  String ap;
  int numAPs;
  int numAPsAdded = 0;
    jj_consume_token(AP);
    numAPs = Int();
                       header.setNumAPs(numAPs);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case QUOTED:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      ap = Quoted();
    ensure(numAPsAdded < numAPs, ProblemsHoa.HOA_TOO_MANY_APS, numAPs, ap);
    numAPsAdded++;
    header.addAP(ap);
    }
  }

  final public void Acceptance(HanoiHeader header) throws ParseException {
  int numSets;
  Acceptance acceptance;
    jj_consume_token(ACCEPTANCE);
    numSets = Int();
                                header.setNumAccSets(numSets);
    acceptance = AcceptanceOr(numSets);
                                                                                                      header.setAcceptance(acceptance);
   header.setAcceptance(acceptance);
  }

  final public Acceptance AcceptanceOr(int numSets) throws ParseException {
  Acceptance p;
  Acceptance nextProp;
    p = AcceptanceAnd(numSets);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      jj_consume_token(OR);
      nextProp = AcceptanceAnd(numSets);
      p = new AcceptanceOr(p, nextProp);
    }
    {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  final public Acceptance AcceptanceAnd(int numSets) throws ParseException {
  Acceptance p;
  Acceptance nextProp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INF:
    case FIN:
      p = AcceptanceSet(numSets);
      break;
    case T:
    case F:
      p = AcceptanceBoolean(numSets);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      jj_consume_token(AND);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INF:
      case FIN:
        nextProp = AcceptanceSet(numSets);
        break;
      case T:
      case F:
        nextProp = AcceptanceBoolean(numSets);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      p = new AcceptanceAnd(p, nextProp);
    }
    {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  final public Acceptance AcceptanceSet(int numSets) throws ParseException {
  boolean negated = false;
  InfFin infFin;
  int set;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INF:
      jj_consume_token(INF);
           infFin = InfFin.INF;
      break;
    case FIN:
      jj_consume_token(FIN);
                                            infFin = InfFin.FIN;
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(LPARENTH);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
                                                                                         negated = true;
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    set = Int();
    jj_consume_token(RPARENTH);
    ensure(set < numSets, ProblemsHoa.HOA_INVALID_ACC_SET, set, numSets);
    {if (true) return new AcceptanceSet(infFin, negated, set);}
    throw new Error("Missing return statement in function");
  }

  final public Acceptance AcceptanceBoolean(int numSets) throws ParseException {
  boolean value;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case T:
      jj_consume_token(T);
          value = true;
      break;
    case F:
      jj_consume_token(F);
                                    value = false;
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return new AcceptanceBoolean(value);}
    throw new Error("Missing return statement in function");
  }

  final public void AccName(HanoiHeader header) throws ParseException {
  int numAccs;
  int numPairs;
  int genParameter;
  AcceptanceName name = new AcceptanceName();
  String minMax;
  String oddEven;
  String identifier;
  int intParameter;
    jj_consume_token(ACC_NAME);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BUCHI:
      jj_consume_token(BUCHI);
               name.setName(HanoiHeader.BUCHI);
      break;
    case GENERALIZED_BUCHI:
      jj_consume_token(GENERALIZED_BUCHI);
      numAccs = Int();
                                           name.setName(HanoiHeader.GENERALIZED_BUCHI); name.addParameter(numAccs);
      break;
    case CO_BUCHI:
      jj_consume_token(CO_BUCHI);
                  name.setName(HanoiHeader.CO_BUCHI);
      break;
    case GENERALIZED_CO_BUCHI:
      jj_consume_token(GENERALIZED_CO_BUCHI);
      numAccs = Int();
                                              name.setName(HanoiHeader.GENERALIZED_CO_BUCHI); name.addParameter(numAccs);
      break;
    case STREETT:
      jj_consume_token(STREETT);
      numAccs = Int();
                                 name.setName(HanoiHeader.STREETT); name.addParameter(numAccs);
      break;
    case RABIN:
      jj_consume_token(RABIN);
      numAccs = Int();
                               name.setName(HanoiHeader.RABIN); name.addParameter(numAccs);
      break;
    case GENERALIZED_RABIN:
      jj_consume_token(GENERALIZED_RABIN);
      numPairs = Int();
                                            name.setName(HanoiHeader.GENERALIZED_RABIN); name.addParameter(numPairs);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUM_INT:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_5;
        }
        genParameter = Int();
                                                                                                                                               name.addParameter(genParameter);
      }
      break;
    case PARITY:
      jj_consume_token(PARITY);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MIN:
        jj_consume_token(MIN);
                      minMax = HanoiHeader.PARITY_MIN;
        break;
      case MAX:
        jj_consume_token(MAX);
                                                                 minMax = HanoiHeader.PARITY_MAX;
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ODD:
        jj_consume_token(ODD);
                                                                                                             oddEven = HanoiHeader.PARITY_ODD;
        break;
      case EVEN:
        jj_consume_token(EVEN);
                                                                                                                                                          oddEven = HanoiHeader.PARITY_EVEN;
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      numPairs = Int();
                                                                                                                                                                                                                   name.setName(HanoiHeader.PARITY); name.addParameter(minMax); name.addParameter(oddEven); name.addParameter(numPairs);
      break;
    case ALL:
      jj_consume_token(ALL);
             name.setName(HanoiHeader.ALL);
      break;
    case NONE:
      jj_consume_token(NONE);
              name.setName(HanoiHeader.NONE);
      break;
    case IDENTIFIER:
      identifier = Identifier();
                                 name.setName(identifier);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUM_INT:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_6;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          identifier = Identifier();
                                                                                            name.addParameter(identifier);
          break;
        case NUM_INT:
          intParameter = Int();
                                                                                                                                                         name.addParameter(intParameter);
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   header.setAcceptanceName(name);
  }

  final public void Alias(HanoiHeader header) throws ParseException {
  String aname;
  Expression expr;
    jj_consume_token(ALIAS);
    aname = Aname();
    expr = ExpressionOr(header);
   ensure(!header.containsAname(aname), ProblemsHoa.HOA_ANAME_SPECIFIED_TWICE,
     aname);
   header.putAname(aname, expr);
  }

  final public void Tool(HanoiHeader header) throws ParseException {
  String toolName;
  String toolVersion;
    jj_consume_token(TOOL);
    toolName = Quoted();
                              header.setToolName(toolName);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUOTED:
      toolVersion = Quoted();
                                                                                       header.setToolVersion(toolVersion);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
  }

  final public void Name(HanoiHeader header) throws ParseException {
  String name;
    jj_consume_token(NAME);
    name = Quoted();
                          header.setName(name);
  }

  final public void Properties(HanoiHeader header) throws ParseException {
  String property;
    jj_consume_token(PROPERTIES);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_7;
      }
      property = Identifier();
                                          header.addProperty(property);
    }
  }

  final public GraphExplicitWrapper Body(HanoiHeader header) throws ParseException {
  GraphPreparator graph = new GraphPreparator(header);
    jj_consume_token(BODY);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATE:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_8;
      }
      State(header, graph);
    }
    jj_consume_token(END);
    graph.ensureStates();
    {if (true) return graph.toGraph();}
    throw new Error("Missing return statement in function");
  }
